// Copyright 2018 Pedro Salgado
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/steenzout/meetup-20180403-grpc/pokeapi";

package pokeapi;

// A service that handles the Pok√©API.
service Pokeapi {
  // GetPokemon get information about a pokemon.
  rpc GetPokemon(GetRequest) returns (GetReply) {}
}

// The request message containing the Pokemon unique identifier.
message GetRequest {
  uint64 id = 1;
}

// The response message containing the Pokemon information.
message GetReply {
  int64 id = 1;
  string name = 2;
  int64 weight = 3;
}
